add analytics tag

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -12,6 +12,16 @@
   <title></title>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BVENVXTYW0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BVENVXTYW0');
+</script>
+
 <body>
   <div id="root"></div>
 </body>
