comment analytics tag

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -12,7 +12,7 @@
   <title></title>
 </head>
 
-<!-- Google tag (gtag.js) -->
+<!-- Google tag (gtag.js)
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-BVENVXTYW0"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -21,7 +21,7 @@
 
   gtag('config', 'G-BVENVXTYW0');
 </script>
-
+ -->
 <body>
   <div id="root"></div>
 </body>
