slight modification to description text

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -7,7 +7,7 @@
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Kirjesampo: 1800 luvun suomalaiset kirjeet - LetterSampo Finland: Finnish 19th century letters" />
+  <meta name="description" content="Kirjesampo: 1800-luvun suomalaisia kirjeitä - LetterSampo Finland: Finnish 19th century letters" />
   <meta name="google-site-verification" content="selT-kfLzFPs4itc7Om4GtU3oCn7e-wf7T3OsiHZk4E" />
   <title>Kirjesampo - LetterSampo Finland</title>
 </head>
